[gd_scene load_steps=5 format=3 uid="uid://fgwbejfhbulb"]

[ext_resource type="Script" uid="uid://vhinakad8wid" path="res://스테이지1/Scenes/bullet.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://bxm52f32mesfo" path="res://스테이지1/explosion.tscn" id="2_bylgr"]
[ext_resource type="Texture2D" uid="uid://dqyx26x27bsfo" path="res://캐릭터/tank_bullet3.png" id="3_16edn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shape"]
size = Vector2(32, 12)

[node name="Bullet" type="RigidBody2D" groups=["boss_bullets"]]
collision_layer = 16
collision_mask = 3
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("1_script")
explosion_scene = ExtResource("2_bylgr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.06465092, 0.08547202)
texture = ExtResource("3_16edn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_shape")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-16, -6, 32, 12)

[node name="CollisionEnableTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="CollisionEnableTimer" to="." method="_on_collision_enable_timer_timeout"]
